--- a/Filtering_data_with_specific_value.ipynb
+++ b/Filtering_data_with_specific_value.ipynb
@@ -392,7 +392,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('marketing.csv', sep='\\t')\n",
+    "df = pd.read_csv('marketing.csv', sep='\\t') #sesuakian file berada dan separator nya apa\n",
     "display(df)"
    ]
   },
